# simpletracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  clean-cmake.sh  cmake_install.cmake  install_manifest.txt
experiments/: exemplu_buf_ABCD.txt  how_to_debug_vscode.txt
experiments/experimentsPython/: experiments..py
experiments/mazeExperiments/: maze  maze.c
experiments/newPipeExperiments/: deserialization  deserialization.cpp  reader.c  serialization  serialization.cpp  sharedFile  writer.c
experiments/newPipeExperiments/~/.vscode-root/: Cookies  machineid  storage.json
experiments/newPipeExperiments/~/.vscode-root/Backups/: workspaces.json
experiments/newPipeExperiments/~/.vscode-root/Cache/: 024851657a48ee65_0  526a8825caa06dc6_0  751a34aacba5dfdb_0  7c9d642ab1095065_0  cbc42e4c979f69f0_0
experiments/newPipeExperiments/~/.vscode-root/Cache/index-dir/: the-real-index
experiments/newPipeExperiments/~/.vscode-root/CachedData/51b0b28134d51361cf996d2f0a1c698247aeabd8/: AccessibilityManager-9e5f9789523dbc978960c1b4b0a37ced.code  AltClickHandler-e3a4a3255eb1431201c49ec88e757c83.code  AvailabilityData-a8b04c800ee33d1aefb952f21049e3b4.code  Base-4c5d4fe2dc4093c0d4b972baaa70c227.code  (+185 more)
experiments/newPipeExperiments/~/.vscode-root/CachedExtensions/: user
experiments/simplu_exemplu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  simple-accumulator.c  simple-accumulator.s
experiments/testingExecution/: CMakeLists.txt  ConcolicExecutor.cpp  ConcolicExecutor.h  FileHandling.cpp  FileHandling.h  Makefile  TestCase.h  TestGraph.cpp  TestGraph.h  Z3Interpretation.cpp  Z3Interpretation.h  main  main.cpp  testOutput.txt  trace.simple.txt  z3
experiments/testingExecution/~/.vscode-root/: Cookies  machineid  rapid_render.json  storage.json
experiments/testingExecution/~/.vscode-root/Backups/: workspaces.json
experiments/testingExecution/~/.vscode-root/Cache/: 024851657a48ee65_0  526a8825caa06dc6_0  53dbca0d1699f20c_0  6585b8dbcfa2672e_0  751a34aacba5dfdb_0  8bd1398ab90d5c34_0  cbc42e4c979f69f0_0
experiments/testingExecution/~/.vscode-root/CachedExtensions/: user
experiments/testingExecution2/: main.cpp
experiments/testingExecutionCopy/testingExecution/: SimpleTracerComunicator.cpp  SimpleTracerComunicator.h  TestGraph.h  main  main.cpp  testOutput.txt
experiments/testingExecutionSimpleTracer/: CMakeLists.txt  MainProject  Makefile  main  main.cpp
experiments/testingExecutionSimpleTracer/~/.vscode-root/: Cookies  machineid  storage.json
experiments/testingExecutionSimpleTracer/~/.vscode-root/Backups/: workspaces.json
experiments/testingExecutionSimpleTracer/~/.vscode-root/Cache/: 0063a807804e5075_0  024851657a48ee65_0  0e1cf174dd6c4506_0  15c789768e72640b_0  1ed142d8c93c5ac5_0  25cb467a21a6b103_0  35e0060446e7dacc_0  4446f72fc7edd9ad_0  4e7bbb9b746b0b31_0  65064cb0f34eb8a2_0  6b44d24581efae43_0  6e3a8feeb744b394_0  751a34aacba5dfdb_0  81de212ca884a9e9_0  892cdddf4369153f_0  8a265abd566c1856_0  8da38734c8bde3ec_0  a30f6a178fa4ad39_0  a48f112b767a4752_0  b1a16d15bfaca35b_0  bfed4f7d2e994511_0  bff8e0abd7692358_0  c733fcf12479e70c_0  cbc42e4c979f69f0_0  d7fc100ae66c2f28_0  e0a884bead87b423_0  e63433de5ac81279_0  ece17d5a43a0c921_0  f6f106dbd137c295_0
experiments/testingExecutionSimpleTracer/~/.vscode-root/CachedExtensions/: builtin  user
include/: TrackingExecutor.h  Z3SymbolicExecutor.h  annotated.tracer.h  basic.observer.h
libtracer/: CMakeLists.txt  Makefile  cmake_install.cmake  utils.cpp
libtracer/annotated.tracer/: annotated.tracer.cpp
libtracer/annotated.tracer/tainted.index/: CMakeLists.txt  Makefile  TrackingExecutor.cpp  cmake_install.cmake
libtracer/annotated.tracer/z3.executor/: CMakeCache.txt  CMakeLists.txt  Makefile  SymbolicDemoMain.cpp  Z3SymbolicExecutor.cpp  Z3SymbolicExecutor.h  Z3SymbolicFlags.cpp  Z3Utils.cpp  Z3Utils.h  cmake_install.cmake  symbolic_demo
libtracer/simple.tracer/: simple.tracer.cpp
offline.sanitizers/: CMakeLists.txt  Makefile  Z3Handler.cpp  cmake_install.cmake  interval.tree.test  river.sanitizer  z3.handler.test
offline.sanitizers/address.sanitizer/: Makefile  cmake_install.cmake
river.tracer/: CMakeLists.txt  Makefile  cmake_install.cmake  river.tracer  river.tracer.cpp
(+404 files in other folders)
